--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="container" style="margin-top: 100px">
-  <p class="text-center">啦啦啦
+  <p class="text-center">喵喵喵庭！
     <br>Design by
     <a href="http://courses.growthschool.com/courses/rails-101/" target=_new>Hayson</a>
 
