--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,6 +11,7 @@
       <% end %>
     </span>
 
+    <%= link_to("Review" ,new_group_review_path(@group), class: "btn btn-default pull-right")%>
     <%= link_to("Write a post", new_group_post_path(@group), class:"btn btn-default pull-right")%>
     <% if current_user && current_user == @group.user %>
     <%= link_to("Edit", edit_group_path(@group), class: "btn btn-primary pull-right")%>
