--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -39,6 +39,25 @@
     </tbody>
   </table>
 
+  <table class="table">
+    <thead>
+      <tr>
+        <th>电影名称</th>
+
+        <th>发表时间</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @reviews.each do |review| %>
+      <tr>
+        <td><%= review.content %></td>
+
+        <td><%= review.created_at %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+
   <div class="text-center">
     <%= will_paginate @posts %>
   </div>
